# CrawlerCleanup

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  concat.sh  dedup.sh  deduped.txt  domain_finder  domain_finder.cpp  domain_finder.py  domain_finder_test.py  duplicate_detector  duplicate_detector.cpp  duplicate_detector_test.py  findoffset.cpp  link_remover.cpp  links.txt  links_extractor.cpp  parser.cpp  rankinserter.py  removeLastFour.sh  urls.txt  wikipediascraper.py  wikisearcher.py  wikititles.txt
.cache/clangd/index/: domain_finder.cpp.8754A78F2B1F6DA8.idx  duplicate_detector.cpp.CF7499ABCC66C58A.idx  link_remover.cpp.F50F5A8F305D0462.idx  parser.cpp.6D01F0F1E3297F2B.idx
test_concat/: links1.txt  links3.txt
test_data/: 0.parsed  1.parsed  2.parsed  3.parsed  4.parsed
test_removal/: link1.txt  link2.txt
